force-app/main/default/objects/Lead/fields/AI_Points_Faibles__c.field-meta.xml
<CustomField>
    <fullName>AI_Points_Faibles__c</fullName>
    <description>Points à améliorer identifiés dans le profil du candidat</description>
    <label>AI Points Faibles</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>