force-app/main/default/objects/Lead/fields/AI_Points_Forts__c.field-meta.xml
<CustomField>
    <fullName>AI_Points_Forts__c</fullName>
    <description>Points forts identifiés dans le profil du candidat</description>
    <label>AI Points Forts</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>