force-app/main/default/objects/Lead/fields/AI_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>AI_Recommendation__c</fullName>
    <description>Recommandation IA générée par l'analyse du CV</description>
    <label>AI Recommendation</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>