force-app/main/default/objects/Lead/fields/Score_Matching__c.field-meta.xml
<CustomField>
    <fullName>Score_Matching__c</fullName>
    <description>Score de compatibilité CV/Poste calculé par le moteur NLP (0-100)</description>
    <label>Score Matching</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>